--- a/_posts/2024-11-13-eda.md
+++ b/_posts/2024-11-13-eda.md
@@ -65,7 +65,7 @@ Here is a table summary of the data (separated by sport):
 | W Soccer     | 339         | 0.03              | 0.95            |
 | **Total**    | **356**     |                   |                 |
 
-*Notes*: The metric value corresponds to the given sport (as discussed above). Additionally, the row containing the totals is based on the final dataset (after combining sports so each row contains one team), thus the sample size of 356.
+*Note:* The metric value corresponds to the given sport (as discussed above). Additionally, the row containing the total is based on the final dataset (after combining sports so each row contains one team), thus the sample size of 356.
 
 Also of interest is the distribution of average z-scores (calculated using the z-score of each available metric for each team):
 
@@ -77,7 +77,7 @@ As can be seen by the graph, the distribution is roughly symmetric and centered 
 
 #### Most Successful Overall
 
-Since one of the goals of this analysis is to determine which college has had the best performance across all three sports, I looked at the results when only considering colleges with a team for each sport. Here is a list of the top five schools and their stats:
+Since one of the goals of this analysis is to determine which college has had the best performance across all three sports, I looked at the results when only considering colleges with a team for all three sports. Here is a list of the top five schools and their stats:
 
 | College    | +/- GPG | +/- Hitting % | +/- PPG | Average z-Score |
 | ---------- | ------- | ------------- | ------- | --------------- |
@@ -91,7 +91,7 @@ Notably, the top three teams have all been ranked in the top five for most of th
 
 #### Power Four Conferences
 
-For those unfamiliar with Power Four conferences, you can think of them as the most elite "leagues" of college sports. They are considered the best of the best and thus are focused on the most when discussing college sports. Therefore, I felt it only made sense to take a look at teams from these conferences specifically since they often play the most difficult competition. Here is a list of Power Four conferences:
+For those unfamiliar with Power Four conferences, you can think of them as the most elite "leagues" of college sports. They are considered the best of the best and are thus focused on the most when discussing college sports. Therefore, I felt it only made sense to take a look at teams from these conferences specifically since they often play the most difficult competition. Here is a list of Power Four conferences:
 * <a href="https://theacc.com/" target="_blank">ACC</a>
 * <a href="https://bigten.org/" target="_blank">Big Ten</a>
 * <a href="https://big12sports.com/" target="_blank">Big 12</a>
@@ -121,7 +121,7 @@ The SEC and ACC appear to be fairly balanced conferences in these sports, with l
 
 #### BYU
 
-Finally, we'll take a quick look at BYU's stats for each sport and each one's overall ranking, ranking among colleges with all three teams, and conference ranking (with parentheses next to each indicating how many total colleges fall under that category).
+Finally, we'll take a quick look at BYU's stats for each sport and each one's ranking overall, ranking among colleges with all three teams, and conference ranking (with parentheses next to each indicating how many total colleges fall under that category).
 
 | Ranking                     | +/- GPG     | +/- Hitting % | +/- PPG    | Average z-Score |
 | --------------------------- | ----------- | ------------- | ---------- | --------------- |
